Fix matrix size mismatch

--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -97,7 +97,13 @@
     "train_X = transformed_data[train_index]\n",
     "train_y = targets[train_index]\n",
     "test_X = transformed_data[test_index]\n",
-    "test_y = targets[test_index]"
+    "test_y = targets[test_index]\n",
+    "\n",
+    "# Try to solve label shape error\n",
+    "\n",
+    "from sklearn.utils import column_or_1d\n",
+    "train_y = column_or_1d(train_y)\n",
+    "test_y = column_or_1d(test_y)"
    ]
   },
   {
@@ -107,7 +113,7 @@
    "outputs": [],
    "source": [
     "m = train_X.shape[0]\n",
-    "n = train_X.shape[1] - 1"
+    "n = train_X.shape[1]"
    ]
   },
   {
@@ -124,7 +130,7 @@
     "\n",
     "n_hidden1 = 300\n",
     "n_hidden2 = 100\n",
-    "n_outputs = 1\n",
+    "n_outputs = 2\n",
     "learning_rate = 0.01"
    ]
   },
@@ -134,7 +140,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = tf.placeholder(tf.float32, shape=(None, m), name=\"X\")\n",
+    "file_writer = tf.summary.FileWriter('tf_logs', tf.get_default_graph())\n",
+    "\n",
+    "X = tf.placeholder(tf.float32, shape=(None, n), name=\"X\")\n",
     "y = tf.placeholder(tf.int64, shape=(None), name=\"y\")"
    ]
   },
@@ -215,9 +223,6 @@
     "init = tf.global_variables_initializer()\n",
     "saver = tf.train.Saver()\n",
     "\n",
-    "n_epochs = 40\n",
-    "batch_size = 50\n",
-    "\n",
     "root_logdir = \"tf_logs\"\n",
     "logdir = \"{}/run-{}/\".format(root_logdir, now)"
    ]
@@ -241,7 +246,8 @@
     "    # Create batches\n",
     "    \n",
     "    X_batch = train_X[indices] # not shown\n",
-    "    y_batch = train_y.reshape(-1, 1)[indices] # not shown\n",
+    "    #y_batch = train_y.reshape(-1, 1)[indices] # not shown\n",
+    "    y_batch = column_or_1d(train_y[indices]) # not shown\n",
     "    \n",
     "    return X_batch, y_batch"
    ]
@@ -252,8 +258,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_epochs = 20\n",
+    "n_epochs = 50\n",
     "n_batches = 50\n",
+    "batch_size = 100\n",
     "\n",
     "with tf.Session() as sess:\n",
     "    init.run()\n",
@@ -261,13 +268,27 @@
     "        for iteration in range(m // batch_size):\n",
     "            X_batch, y_batch = fetch_batch(epoch, iteration, batch_size)\n",
     "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
+    "            if iteration % 100 == 0:\n",
+    "                summary_str = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
+    "                print(summary_str)\n",
+    "                step = epoch * n_batches + iteration\n",
+    "                print(step)\n",
+    "                #file_writer.add_summary(summary_str, step)\n",
     "        acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
-    "        #acc_test = accuracy.eval(feed_dict={X: mnist.test.images,\n",
-    "        #                                    y: mnist.test.labels})\n",
+    "        acc_test = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
+    "\n",
     "        print(epoch, \"Train accuracy:\", acc_train, \"Test accuracy:\", acc_test)\n",
     "\n",
-    "    save_path = saver.save(sess, \"./saver/my_model_final.ckpt\")\n",
-    "    "
+    "    save_path = saver.save(sess, \"./saver/my_model_final.ckpt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_writer.close()"
    ]
   }
  ],
