--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -25,11 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../../data/transformed_data.pkl','rb') as f:\n",
+    "with open('/home/matthew/Documents/classifypipe/data/transformed_data.pkl','rb') as f:\n",
     "    transformed_data = pickle.load(f)\n",
     "    f.close()\n",
     "\n",
-    "with open('../../data/targets.pkl','rb') as f:\n",
+    "with open('/home/matthew/Documents/classifypipe/data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
     "    f.close()\n",
     "\n",
@@ -294,9 +294,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "classifypipe",
    "language": "python",
-   "name": "python3"
+   "name": "classifypipe"
   },
   "language_info": {
    "codemirror_mode": {
@@ -308,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
