Implement dropout and AdamOptimization

--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -25,11 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('/home/matthew/Documents/classifypipe/data/transformed_data.pkl','rb') as f:\n",
+    "with open('../../data/transformed_data.pkl','rb') as f:\n",
     "    transformed_data = pickle.load(f)\n",
     "    f.close()\n",
     "\n",
-    "with open('/home/matthew/Documents/classifypipe/data/targets.pkl','rb') as f:\n",
+    "with open('../../data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
     "    f.close()\n",
     "\n",
@@ -128,10 +128,12 @@
     "\n",
     "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "n_hidden1 = 300\n",
-    "n_hidden2 = 100\n",
+    "n_hidden1 = 100\n",
+    "n_hidden2 = 300\n",
     "n_outputs = 2\n",
-    "learning_rate = 0.01"
+    "learning_rate = 0.01\n",
+    "dropout_rate = 0.5  # == 1 - keep_prob\n",
+    "\n"
    ]
   },
   {
@@ -143,7 +145,7 @@
     "file_writer = tf.summary.FileWriter('tf_logs', tf.get_default_graph())\n",
     "\n",
     "X = tf.placeholder(tf.float32, shape=(None, n), name=\"X\")\n",
-    "y = tf.placeholder(tf.int64, shape=(None), name=\"y\")"
+    "y = tf.placeholder(tf.int64, shape=(None), name=\"y\")\n"
    ]
   },
   {
@@ -172,12 +174,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uses the ELU activation function\n",
+    "\n",
+    "training = tf.placeholder_with_default(False, shape=(), name='training')\n",
+    "\n",
+    "dropout_rate = 0.5  # == 1 - keep_prob\n",
+    "X_drop = tf.layers.dropout(X, dropout_rate, training=training)\n",
+    "\n",
     "with tf.name_scope(\"dnn\"):\n",
-    "    hidden1 = neuron_layer(X, n_hidden1, name=\"hidden1\",\n",
-    "                           activation=tf.nn.relu)\n",
-    "    hidden2 = neuron_layer(hidden1, n_hidden2, name=\"hidden2\",\n",
-    "                           activation=tf.nn.relu)\n",
-    "    logits = neuron_layer(hidden2, n_outputs, name=\"outputs\")"
+    "    hidden1 = tf.layers.dense(X_drop, n_hidden1, activation=tf.nn.elu,\n",
+    "                              name=\"hidden1\")\n",
+    "    \n",
+    "    hidden1_drop = tf.layers.dropout(hidden1, dropout_rate, training=training)\n",
+    "    hidden2 = tf.layers.dense(hidden1_drop, n_hidden2, activation=tf.nn.elu,\n",
+    "                              name=\"hidden2\")\n",
+    "    \n",
+    "    hidden2_drop = tf.layers.dropout(hidden2, dropout_rate, training=training)\n",
+    "    logits = tf.layers.dense(hidden2_drop, n_outputs, name=\"outputs\")"
    ]
   },
   {
@@ -199,7 +212,7 @@
    "outputs": [],
    "source": [
     "with tf.name_scope(\"train\"):\n",
-    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate)\n",
+    "    optimizer = tf.train.AdamOptimizer(learning_rate = learning_rate)\n",
     "    training_op = optimizer.minimize(loss)"
    ]
   },
@@ -270,10 +283,9 @@
     "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
     "            if iteration % 100 == 0:\n",
     "                summary_str = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
-    "                print(summary_str)\n",
     "                step = epoch * n_batches + iteration\n",
-    "                print(step)\n",
-    "                #file_writer.add_summary(summary_str, step)\n",
+    "                \n",
+    "                #file_writer.add_summary(summary_str,step)\n",
     "        acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
     "        acc_test = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
     "\n",
@@ -294,9 +306,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "classifypipe",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "classifypipe"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -308,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
