--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "# Try to solve label shape error\n",
     "\n",
-    "from sklearn.utils import column_or_1d\n",
+    "from sklearn.utils import column_or_1d \n",
     "train_y = column_or_1d(train_y)\n",
     "test_y = column_or_1d(test_y)"
    ]
@@ -282,13 +282,18 @@
     "            X_batch, y_batch = fetch_batch(epoch, iteration, batch_size)\n",
     "            sess.run(training_op, feed_dict={X: X_batch, y: y_batch})\n",
     "            if iteration % 100 == 0:\n",
-    "                summary_str = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
     "                step = epoch * n_batches + iteration\n",
+    "            #    acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
+    "             #   acc_test = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
+    "                #file_writer.add_summary(summary,step)\n",
+    "            acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
+    "            acc_test = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
+    "            \n",
+    "            \n",
     "                \n",
-    "                #file_writer.add_summary(summary_str,step)\n",
-    "        acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
-    "        acc_test = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
-    "\n",
+    "                \n",
+    "                    # perform the operations we defined earlier on batch            \n",
+    "                \n",
     "        print(epoch, \"Train accuracy:\", acc_train, \"Test accuracy:\", acc_test)\n",
     "\n",
     "    save_path = saver.save(sess, \"./saver/my_model_final.ckpt\")"
@@ -306,9 +311,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "classifypipe",
    "language": "python",
-   "name": "python3"
+   "name": "classifypipe"
   },
   "language_info": {
    "codemirror_mode": {
@@ -320,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
