Split into exloration/optimisation

--- a/python/notebooks/adaboost_optimisation.ipynb
+++ b/python/notebooks/adaboost_optimisation.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=42)\n",
+    "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
     "for train_index, test_index in split.split(transformed_data, targets):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n"
@@ -119,258 +119,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Logistic regression model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_reg = LogisticRegression()\n",
-    "log_reg.fit(train_X, train_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_pred = log_reg.predict(train_X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_pred = log_reg.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "confusion_matrix(test_y, test_pred)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Does cross validation make a difference?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scores = cross_val_score(log_reg, test_X, test_y, \n",
-    "                         scoring=\"f1\", cv=20)\n",
-    "\n",
-    "print(\"Mean f1 score:\", round(scores.mean(),2))\n",
-    "print(\"Std f1 score:\", round(scores.std(),2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "nope"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## SVM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm = SVC(kernel=\"rbf\")\n",
-    "svm.fit(train_X, train_y)\n",
-    "\n",
-    "train_pred = svm.predict(train_X)\n",
-    "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "test_pred = svm.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Random Forest"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "\n",
-    "dtc = DecisionTreeClassifier(random_state=42)\n",
-    "dtc.fit(train_X, train_y)\n",
-    "\n",
-    "train_pred = dtc.predict(train_X)\n",
-    "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "test_pred = dtc.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "print(confusion_matrix(test_y, test_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A decision tree seems to perform much better on this dataset. We are beyond dice roll territory!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This does not perform very well!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Random Forest model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "rf = RandomForestClassifier(random_state=42)\n",
-    "rf.fit(train_X, train_y)\n",
-    "train_pred = rf.predict(train_X)\n",
-    "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "test_pred = rf.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "print(confusion_matrix(test_y, test_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pd.DataFrame([df.columns,rf.feature_importances_])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bagging classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import BaggingClassifier\n",
-    "\n",
-    "bc = BaggingClassifier(\n",
-    "    DecisionTreeClassifier(random_state=42), n_estimators=500,\n",
-    "    bootstrap=True, n_jobs=-1, oob_score=True, random_state=40)\n",
-    "bc.fit(train_X, train_y)\n",
-    "bc.oob_score_\n",
-    "\n",
-    "train_pred = bc.predict(train_X)\n",
-    "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "test_pred = bc.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "print(confusion_matrix(test_y, test_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ExtraTreesClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import ExtraTreesClassifier\n",
-    "\n",
-    "etc = ExtraTreesClassifier(random_state=42)\n",
-    "etc.fit(train_X, train_y)\n",
-    "train_pred = etc.predict(train_X)\n",
-    "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "test_pred = etc.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "print(confusion_matrix(test_y, test_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Adaboost classifier"
    ]
   },
@@ -381,6 +129,7 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "abc = AdaBoostClassifier(\n",
     "    DecisionTreeClassifier(max_depth=1), n_estimators=200,\n",
@@ -403,7 +152,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What about an ensemble of all the best models so far?"
+    "## Optimising the AdaBoost for high precision\n",
+    "\n",
+    "Since we are mostly interested in having a very precise model, and less worried about recall, here I tweak it."
    ]
   },
   {
@@ -412,28 +163,101 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import VotingClassifier\n",
-    "voting_clf = VotingClassifier(\n",
-    "    estimators=[('log_reg', log_reg),('ada', abc), ('randomForest', rf), ('extra', etc), ('bagging', bc)],\n",
-    "    voting='hard')\n",
-    "voting_clf.fit(train_X, train_y)\n",
-    "train_pred = voting_clf.predict(train_X)\n",
+    "#Extract a decision function for a single training example\n",
     "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
+    "abc.decision_function(train_X[0,:].reshape(1,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_predict\n",
     "\n",
-    "test_pred = voting_clf.predict(test_X)\n",
-    "class_report = classification_report(test_y, test_pred)\n",
-    "print(class_report)\n",
+    "train_y_scores = cross_val_predict(abc, train_X, train_y, cv=3, method=\"decision_function\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_recall_curve\n",
     "\n",
-    "print(confusion_matrix(test_y, test_pred))"
+    "precisions, recalls, thresholds = precision_recall_curve(train_y, train_y_scores[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(thresholds, precisions[:-1], \"b--\", label=\"Precision\")\n",
+    "plt.plot(thresholds, recalls[:-1], \"g-\", label=\"Recall\")\n",
+    "plt.xlabel(\"Threshold\")\n",
+    "plt.legend(loc=\"upper left\")\n",
+    "plt.ylim([0, 1])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(recalls, precisions, \"r-\")\n",
+    "plt.xlabel('Recall')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y_pred_90 = (train_y_scores[:,1] > 0.06)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_y_pred_90"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Check the recall and precision with new targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score\n",
+    "\n",
+    "print('precision:', round(precision_score(train_y, train_y_pred_90), 3))\n",
+    "print('recall:', round(recall_score(train_y, train_y_pred_90), 3))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stacking"
+    "Try with the test set"
    ]
   },
   {
@@ -442,20 +266,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "randomforest_pred = rf.predict_proba(test_X)\n",
-    "adaboost_pred = abc.predict_proba(test_X)\n",
-    "bagging_pred = bc.predict_proba(test_X)\n",
-    "logreg_pred = log_reg.predict_proba(test_X)\n",
+    "test_y_scores = cross_val_predict(abc, test_X, test_y, cv=3, method=\"decision_function\")\n",
+    "test_y_pred_90 = (test_y_scores[:,1] > 0.06)\n",
     "\n",
-    "blended = np.c_[randomforest_pred, adaboost_pred, bagging_pred]\n",
+    "print('precision:', round(precision_score(test_y, test_y_pred_90), 3))\n",
+    "print('recall:', round(recall_score(test_y, test_y_pred_90), 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the classification report:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(classification_report(test_y, test_y_pred_90))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(confusion_matrix(test_y, test_y_pred_90))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So the model often thinks that surveys are 'not ok' (and therefore will go on to human classifiers) when in fact they are 'ok' (this is fine because a human will later classify them), but the model very rarely thinks a survey is 'ok' when it is not ok. This is the ideal balance because it will prevent us from accidentally removing surveys from the human pool prematurely."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimising parameters with RandomizedSearch/GridSearch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Which variables can we tune in the RandomizedSearch?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abc.get_params().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import randint\n",
     "\n",
-    "blended_model = DecisionTreeClassifier(random_state=1337)\n",
-    "blended_model.fit(blended, test_y)\n",
+    "param_distribs = {\n",
+    "        'n_estimators': randint(low=1, high=400),\n",
+    "    # TO access the parameters of the underlying Decision Tree, use\n",
+    "    # base_estimator__...\n",
+    "        'base_estimator__max_leaf_nodes': randint(1,10),\n",
+    "        'base_estimator__max_features': randint(1,5),\n",
+    "        'base_estimator__min_samples_split': randint(2,20),\n",
+    "        'base_estimator__min_samples_leaf': randint(1,20),\n",
+    "    }\n",
     "\n",
-    "blended_pred = blended_model.predict(blended)\n",
-    "class_report = classification_report(test_y, blended_pred)\n",
-    "print(class_report)\n",
-    "blended_model.get_params()\n"
+    "rnd_search = RandomizedSearchCV(abc, param_distributions=param_distribs,\n",
+    "                                n_iter=10, cv=5, scoring='f1', random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnd_search.fit(train_X, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cvres = rnd_search.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(round(mean_score,3), params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rnd_search.best_estimator_"
    ]
   }
  ],
