--- a/python/notebooks/data_exploration.ipynb
+++ b/python/notebooks/data_exploration.ipynb
@@ -127,6 +127,55 @@
    "source": [
     "t_df.to_csv('../../data/transformed_dataframe_for_exploration.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploration of individual variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformed_data[0]\n",
+    "\n",
+    "plt.plot(transformed_data[0])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(211)\n",
+    "plt.plot(transformed_data[0])\n",
+    "plt.subplot(212)\n",
+    "plt.hist(transformed_data[0])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.subplot(221)\n",
+    "plt.hist(transformed_data[1],histtype='step')\n",
+    "plt.subplot(222)\n",
+    "plt.hist(transformed_data[1], histtype='stepfilled', bins=50)\n",
+    "plt.subplot(223)\n",
+    "plt.hist(transformed_data[1])\n",
+    "plt.subplot(224)\n",
+    "plt.hist(transformed_data[0])\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
