Add neural network to stacked model

--- a/python/notebooks/machine_learning_exploration.ipynb
+++ b/python/notebooks/machine_learning_exploration.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=42)\n",
+    "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
     "for train_index, test_index in split.split(transformed_data, targets):\n",
     "    train_index = train_index\n",
     "    test_index=test_index\n"
@@ -228,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "## Decision Tree"
    ]
   },
   {
@@ -258,14 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A decision tree seems to perform much better on this dataset. We are beyond dice roll territory!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This does not perform very well!"
+    "A decision tree seems to perform much better on this dataset. We are beyond dice roll territory, but it badly overfits the training data leading to poor performance on the tests dataset."
    ]
   },
   {
@@ -282,12 +275,10 @@
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "rf = RandomForestClassifier(random_state=42)\n",
+    "rf = RandomForestClassifier(random_state=42,n_jobs=-1, oob_score=True, n_estimators=500)\n",
     "rf.fit(train_X, train_y)\n",
-    "train_pred = rf.predict(train_X)\n",
     "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
+    "print(rf.oob_score)\n",
     "\n",
     "test_pred = rf.predict(test_X)\n",
     "class_report = classification_report(test_y, test_pred)\n",
@@ -403,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What about an ensemble of all the best models so far?"
+    "## What about an ensemble of all the models so far?"
    ]
   },
   {
@@ -447,15 +438,27 @@
     "bagging_pred = bc.predict_proba(test_X)\n",
     "logreg_pred = log_reg.predict_proba(test_X)\n",
     "\n",
-    "blended = np.c_[randomforest_pred, adaboost_pred, bagging_pred]\n",
+    "with open('../../data/nn_out.pkl', 'rb') as f:\n",
+    "    dnn_pred = pickle.load(f)\n",
+    "    f.close()\n",
     "\n",
-    "blended_model = DecisionTreeClassifier(random_state=1337)\n",
+    "blended = np.c_[randomforest_pred, adaboost_pred, bagging_pred, dnn_pred]\n",
+    "\n",
+    "blended_model = LogisticRegression(random_state=1337)\n",
     "blended_model.fit(blended, test_y)\n",
     "\n",
     "blended_pred = blended_model.predict(blended)\n",
     "class_report = classification_report(test_y, blended_pred)\n",
     "print(class_report)\n",
-    "blended_model.get_params()\n"
+    "blended_model.get_params()\n",
+    "\n",
+    "# Double check this with CV\n",
+    "\n",
+    "scores = cross_val_score(blended_model, test_X, test_y,\n",
+    "                        scoring='accuracy',cv=50)\n",
+    "print(scores)\n",
+    "print(round(scores.mean(),3))\n",
+    "print(round(scores.std(),3))\n"
    ]
   }
  ],
