--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -31,19 +31,7 @@
     "\n",
     "with open('../../data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
-    "    f.close()\n",
-    "\n",
-    "\n",
-    "df = pd.DataFrame(np.c_[transformed_data, targets])\n",
-    "\n",
-    "df.columns = ['start_date_unix', 'start_date_weekday', 'start_date_dayofyear', 'start_date_day', \n",
-    "                'start_date_week', 'start_date_month', 'start_date_hour','time_delta',\n",
-    "                'comment_why_you_came_strlength',\n",
-    "                'comment_why_you_came_capsratio', 'comment_where_for_help_strlength',\n",
-    "                'comment_where_for_help_capsratio','comment_further_comments_strlength',\n",
-    "                'comment_further_comments_capsratio','target']\n",
-    "\n",
-    "df.shape"
+    "    f.close()"
    ]
   },
   {
@@ -128,8 +116,7 @@
     "\n",
     "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "n_hidden1 = 100\n",
-    "n_hidden2 = 300\n",
+    "n_hidden = 150\n",
     "n_outputs = 2\n",
     "learning_rate = 0.01\n",
     "dropout_rate = 0.5  # == 1 - keep_prob\n",
@@ -182,15 +169,20 @@
     "X_drop = tf.layers.dropout(X, dropout_rate, training=training)\n",
     "\n",
     "with tf.name_scope(\"dnn\"):\n",
-    "    hidden1 = tf.layers.dense(X_drop, n_hidden1, activation=tf.nn.elu,\n",
+    "    hidden1 = tf.layers.dense(X_drop, n_hidden, activation=tf.nn.elu,\n",
     "                              name=\"hidden1\")\n",
     "    \n",
     "    hidden1_drop = tf.layers.dropout(hidden1, dropout_rate, training=training)\n",
-    "    hidden2 = tf.layers.dense(hidden1_drop, n_hidden2, activation=tf.nn.elu,\n",
-    "                              name=\"hidden2\")\n",
     "    \n",
+    "    hidden2 = tf.layers.dense(hidden1_drop, n_hidden, activation=tf.nn.elu,\n",
+    "                              name=\"hidden2\")\n",
     "    hidden2_drop = tf.layers.dropout(hidden2, dropout_rate, training=training)\n",
-    "    logits = tf.layers.dense(hidden2_drop, n_outputs, name=\"outputs\")"
+    "    \n",
+    "    hidden3 = tf.layers.dense(hidden2_drop, n_hidden, activation=tf.nn.elu,\n",
+    "                              name=\"hidden3\")\n",
+    "    hidden3_drop = tf.layers.dropout(hidden3, dropout_rate, training=training)\n",
+    "\n",
+    "    logits = tf.layers.dense(hidden3_drop, n_outputs, name=\"outputs\")"
    ]
   },
   {
@@ -288,13 +280,10 @@
     "                #file_writer.add_summary(summary,step)\n",
     "            acc_train = accuracy.eval(feed_dict={X: X_batch, y: y_batch})\n",
     "            acc_test = accuracy.eval(feed_dict={X: test_X, y: test_y})\n",
-    "            \n",
-    "            \n",
-    "                \n",
     "                \n",
     "                    # perform the operations we defined earlier on batch            \n",
     "                \n",
-    "        print(epoch, \"Train accuracy:\", acc_train, \"Test accuracy:\", acc_test)\n",
+    "        print(epoch, \"Train accuracy:\", acc_train, \"Test accuracy:\", round(acc_test,4))\n",
     "\n",
     "    save_path = saver.save(sess, \"./saver/my_model_final.ckpt\")"
    ]
@@ -307,6 +296,48 @@
    "source": [
     "file_writer.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, \"./saver/my_model_final.ckpt\")\n",
+    "    Z = logits.eval(feed_dict={X: test_X})\n",
+    "    y_pred = np.argmax(Z, axis=1)\n",
+    "    \n",
+    "    \n",
+    "with open('../../data/nn_out.pkl', 'wb') as f:\n",
+    "    pickle.dump(Z, f)\n",
+    "    f.close"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "print(classification_report(test_y, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
