--- a/python/notebooks/randomforest_optimisation.ipynb
+++ b/python/notebooks/randomforest_optimisation.ipynb
@@ -27,35 +27,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Precision and Recall recap:\n",
-    "\n",
-    "Precision is the proprotion of all the times a model makes a correct positive prediction out of all the times that the model makes a positive prediction.\n",
-    "\n",
-    "$$\n",
-    "precision=\\frac{TP}{TP+FP}\n",
-    "$$\n",
-    "\n",
-    "Recall is the proportion of times that the model detected a true positive out of all the times the model was correct:\n",
-    "\n",
-    "$$\n",
-    "recall=\\frac{TP}{TP + FN}\n",
-    "$$\n",
-    "\n",
-    "In this case, it doesn't matter much if the model makes a lot of false negatives, as the next step in the process is that the negatives will be seen by human classifiers, obviously it would be good to minimise this however as human classifier time is at a premium. On the other hand, it matters very much that the model does not produce a lot of false positives because these will never get seen by human classifiers, and will be 'lost'.\n",
-    "\n",
-    "In our case a true positive would be identifying an 'ok' class\n",
-    "A false positive would be incorrectly saying it is 'ok' when it is 'not-ok'\n",
-    "\n",
-    "A true negative would be correctly identifying a 'not-ok'\n",
-    "A false negative would be incorrectly saying it is 'not-ok' when it is 'ok'\n",
-    "\n",
-    "A model optimised for precision would one that minimises false positives, which is what we are interested in in this case. A model optimised for precision would be one that minimises false negatives. We are less concerned with this.\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -99,7 +70,7 @@
    "outputs": [],
    "source": [
     "print('test_m =', len(test_index))\n",
-    "print('test_m =', len(train_index))\n",
+    "print('train_m =', len(train_index))\n",
     "print('proportion of targets =',sum(targets[test_index])/len(targets[test_index]))\n",
     "print('proportion of targets =',sum(targets[train_index])/len(targets[train_index]))\n",
     "\n",
@@ -119,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adaboost classifier"
+    "## RandomForest classifier"
    ]
   },
   {
@@ -128,174 +99,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "abc = AdaBoostClassifier(\n",
-    "    DecisionTreeClassifier(max_depth=1), n_estimators=200,\n",
-    "    algorithm=\"SAMME.R\", learning_rate=0.1, random_state=42)\n",
-    "abc.fit(train_X, train_y)\n",
+    "rf = RandomForestClassifier(random_state=42, n_jobs=-1, \n",
+    "                            max_features=None,\n",
+    "                            oob_score=True, \n",
+    "                            n_estimators=500)\n",
+    "rf.fit(train_X, train_y)\n",
     "\n",
-    "train_pred = abc.predict(train_X)\n",
+    "rf.oob_score_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "class_report = classification_report(train_y, train_pred)\n",
-    "print(class_report)\n",
-    "\n",
-    "test_pred = abc.predict(test_X)\n",
+    "test_pred = rf.predict(test_X)\n",
     "class_report = classification_report(test_y, test_pred)\n",
     "print(class_report)\n",
     "\n",
     "print(confusion_matrix(test_y, test_pred))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Optimising the AdaBoost for high precision\n",
-    "\n",
-    "Since we are mostly interested in having a very precise model, and less worried about recall, here I tweak it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Extract a decision function for a single training example\n",
-    "\n",
-    "abc.decision_function(train_X[0,:].reshape(1,-1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import cross_val_predict\n",
-    "\n",
-    "train_y_scores = cross_val_predict(abc, train_X, train_y, cv=3, method=\"decision_function\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import precision_recall_curve\n",
-    "\n",
-    "precisions, recalls, thresholds = precision_recall_curve(train_y, train_y_scores[:,1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(thresholds, precisions[:-1], \"b--\", label=\"Precision\")\n",
-    "plt.plot(thresholds, recalls[:-1], \"g-\", label=\"Recall\")\n",
-    "plt.xlabel(\"Threshold\")\n",
-    "plt.legend(loc=\"upper left\")\n",
-    "plt.ylim([0, 1])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(recalls, precisions, \"r-\")\n",
-    "plt.xlabel('Recall')\n",
-    "plt.ylabel('Precision')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_y_pred_90 = (train_y_scores[:,1] > 0.06)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_y_pred_90"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Check the recall and precision with new targets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import precision_score, recall_score\n",
-    "\n",
-    "print('precision:', round(precision_score(train_y, train_y_pred_90), 3))\n",
-    "print('recall:', round(recall_score(train_y, train_y_pred_90), 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Try with the test set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_y_scores = cross_val_predict(abc, test_X, test_y, cv=3, method=\"decision_function\")\n",
-    "test_y_pred_90 = (test_y_scores[:,1] > 0.06)\n",
-    "\n",
-    "print('precision:', round(precision_score(test_y, test_y_pred_90), 3))\n",
-    "print('recall:', round(recall_score(test_y, test_y_pred_90), 3))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check the classification report:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(classification_report(test_y, test_y_pred_90))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(confusion_matrix(test_y, test_y_pred_90))"
    ]
   },
   {
@@ -325,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abc.get_params().keys()"
+    "rf.get_params().keys()"
    ]
   },
   {
@@ -338,16 +166,14 @@
     "from scipy.stats import randint\n",
     "\n",
     "param_distribs = {\n",
-    "        'n_estimators': randint(low=1, high=400),\n",
+    "        #'n_estimators': randint(low=1, high=500),\n",
+    "        'max_leaf_nodes': randint(low=1, high=40),\n",
     "    # TO access the parameters of the underlying Decision Tree, use\n",
     "    # base_estimator__...\n",
-    "        'base_estimator__max_leaf_nodes': randint(1,10),\n",
-    "        'base_estimator__max_features': randint(1,5),\n",
-    "        'base_estimator__min_samples_split': randint(2,20),\n",
-    "        'base_estimator__min_samples_leaf': randint(1,20),\n",
+    "        'max_depth': randint(1,25),\n",
     "    }\n",
     "\n",
-    "rnd_search = RandomizedSearchCV(abc, param_distributions=param_distribs,\n",
+    "rnd_search = RandomizedSearchCV(rf, param_distributions=param_distribs,\n",
     "                                n_iter=10, cv=5, scoring='f1', random_state=42)"
    ]
   },
