Add XGBoost and keras nn

--- a/python/notebooks/machine_learning_exploration.ipynb
+++ b/python/notebooks/machine_learning_exploration.ipynb
@@ -394,6 +394,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## XGBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "xgb = XGBClassifier()\n",
+    "xgb.fit(train_X, train_y)\n",
+    "\n",
+    "train_pred = xgb.predict(train_X)\n",
+    "\n",
+    "class_report = classification_report(train_y, train_pred)\n",
+    "print(class_report)\n",
+    "\n",
+    "test_pred = xgb.predict(test_X)\n",
+    "class_report = classification_report(test_y, test_pred)\n",
+    "print(class_report)\n",
+    "\n",
+    "print(confusion_matrix(test_y, test_pred))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## What about an ensemble of all the models so far?"
    ]
   },
@@ -437,12 +467,15 @@
     "adaboost_pred = abc.predict_proba(test_X)\n",
     "bagging_pred = bc.predict_proba(test_X)\n",
     "logreg_pred = log_reg.predict_proba(test_X)\n",
+    "xgb_pred = xgb.predict_proba(test_X)\n",
     "\n",
     "with open('../../data/nn_out.pkl', 'rb') as f:\n",
     "    dnn_pred = pickle.load(f)\n",
     "    f.close()\n",
     "\n",
-    "blended = np.c_[randomforest_pred, adaboost_pred, bagging_pred, dnn_pred]\n",
+    "blended = np.c_[\n",
+    "    randomforest_pred, adaboost_pred, bagging_pred, \n",
+    "    dnn_pred, xgb_pred]\n",
     "\n",
     "blended_model = LogisticRegression(random_state=1337)\n",
     "blended_model.fit(blended, test_y)\n",
