Add new features. Optimise keras nn

--- a/python/notebooks/keras_nn.ipynb
+++ b/python/notebooks/keras_nn.ipynb
@@ -13,7 +13,10 @@
     "\n",
     "from keras import models\n",
     "from keras import layers\n",
-    "\n"
+    "from keras.callbacks import TensorBoard\n",
+    "from keras.callbacks import EarlyStopping\n",
+    "from keras.initializers import TruncatedNormal\n",
+    "from keras.optimizers import Adam\n"
    ]
   },
   {
@@ -28,7 +31,11 @@
     "\n",
     "with open('../../data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
-    "    f.close()"
+    "    f.close()\n",
+    "    \n",
+    "    \n",
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]"
    ]
   },
   {
@@ -107,12 +114,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n_nodes = 150\n",
+    "\n",
+    "tnorm=TruncatedNormal(mean=0.0, stddev=0.05, seed=None)\n",
+    "\n",
     "network = models.Sequential()\n",
-    "network.add(layers.Dense(200, activation='elu', input_shape=(n,)))\n",
-    "network.add(layers.Dense(200, activation='elu', input_shape=(n,)))\n",
+    "network.add(\n",
+    "    layers.Dense(n_nodes, activation='elu', \n",
+    "                 input_shape=(n,), kernel_initializer=tnorm))\n",
+    "network.add(layers.Dense(n_nodes, activation='elu', input_shape=(n,)))\n",
+    "network.add(layers.Dense(n_nodes, activation='elu', input_shape=(n,)))\n",
     "network.add(layers.Dense(2, activation='softmax'))\n",
     "\n",
-    "network.compile(optimizer='rmsprop',\n",
+    "\n",
+    "am = Adam(\n",
+    "    lr=0.001, beta_1=0.9, beta_2=0.999, \n",
+    "    epsilon=1e-08, decay=0.0)\n",
+    "\n",
+    "\n",
+    "network.compile(optimizer=am,\n",
     "                loss='categorical_crossentropy',\n",
     "                metrics=['accuracy'])\n",
     "\n",
@@ -121,7 +141,20 @@
     "train_y = to_categorical(train_y)\n",
     "test_y = to_categorical(test_y)\n",
     "\n",
-    "network.fit(train_X, train_y, epochs=5, batch_size=128)"
+    "\n",
+    "tb = TensorBoard(\n",
+    "    log_dir='./logs', histogram_freq=0, batch_size=32, \n",
+    "    write_graph=True, write_grads=False, write_images=True, \n",
+    "    embeddings_freq=0, embeddings_layer_names=None, \n",
+    "    embeddings_metadata=None)\n",
+    "\n",
+    "es = EarlyStopping(\n",
+    "    monitor='val_loss', min_delta=0, patience=0, \n",
+    "    verbose=0, mode='auto')\n",
+    "\n",
+    "network.fit(\n",
+    "    train_X, train_y, epochs=150, \n",
+    "    batch_size=128, callbacks=[tb,es])"
    ]
   },
   {
@@ -152,7 +185,7 @@
    "source": [
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "print(classification_report(test_y, test_pred))"
+    "print(classification_report(test_y[:,1], test_pred))"
    ]
   }
  ],
