--- a/python/notebooks/neural_network.ipynb
+++ b/python/notebooks/neural_network.ipynb
@@ -31,7 +31,11 @@
     "\n",
     "with open('../../data/targets.pkl','rb') as f:\n",
     "    targets = pickle.load(f)\n",
-    "    f.close()"
+    "    f.close()\n",
+    "    \n",
+    "    \n",
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]"
    ]
   },
   {
@@ -116,7 +120,7 @@
     "\n",
     "now = datetime.utcnow().strftime(\"%Y%m%d%H%M%S\")\n",
     "\n",
-    "n_hidden = 150\n",
+    "n_hidden = 200\n",
     "n_outputs = 2\n",
     "learning_rate = 0.01\n",
     "dropout_rate = 0.5  # == 1 - keep_prob\n",
