--- a/python/notebooks/machine_learning_exploration.ipynb
+++ b/python/notebooks/machine_learning_exploration.ipynb
@@ -86,6 +86,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add new features of the combined string length\n",
+    "\n",
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[9,11,13]].sum(axis=1)]\n",
+    "transformed_data = np.c_[transformed_data,transformed_data[:,[10,12,14]].mean(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "split = StratifiedShuffleSplit(n_splits = 1, test_size=0.2, random_state=1337)\n",
     "for train_index, test_index in split.split(transformed_data, targets):\n",
     "    train_index = train_index\n",
